src/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Tick this checkbox to enable record creation on GoToTraining via Create Training Button and to display it in Training Calendar.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrainShark_URL__c</fullName>
        <label>BrainShark URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <inlineHelpText>Date when the course was cancelled.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Co-Organizer of the Training</description>
        <inlineHelpText>Co-Organizer of the Training</inlineHelpText>
        <label>Co-Organizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <inlineHelpText>Complete description of the course contents</inlineHelpText>
        <label>Course Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Level__c</fullName>
        <description>This field is to choose Course Level</description>
        <label>Course Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Number__c</fullName>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Course Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Course_Rating__c</fullName>
        <formula>IMAGE( IF( Examination_Score__c &lt;=2.0 , &quot;/img/samples/light_red.gif&quot;, 
IF(AND(2.0&gt;=Examination_Score__c ,Examination_Score__c &lt;=3.0) , &quot;/img/samples/light_yellow.gif&quot;, 
IF(Examination_Score__c &gt;3.0, &quot;/img/samples/light_red.gif&quot;, null))),&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Marketing Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sales skills Training</fullName>
                </value>
                <value>
                    <fullName>Technical/ Product &amp; Application Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Examination_Date__c</fullName>
        <inlineHelpText>Date when the attendees took the technical examination</inlineHelpText>
        <label>Examination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Examination_Score__c</fullName>
        <inlineHelpText>Total score for technical examination taken</inlineHelpText>
        <label>Examination Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_Offset__c</fullName>
        <label>GMT Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructor_1__c</fullName>
        <inlineHelpText>Name of the Instructor</inlineHelpText>
        <label>Instructor 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_2__c</fullName>
        <description>This is name of instructor 2</description>
        <label>Instructor 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_3__c</fullName>
        <description>This is name of instructor 3</description>
        <label>Instructor 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_Notes__c</fullName>
        <inlineHelpText>Please provide any additional information about the course.</inlineHelpText>
        <label>Instructor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of Course</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Info__c</fullName>
        <inlineHelpText>Information on how materials/documentation will be provided.</inlineHelpText>
        <label>Materials Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to course that is required to be completed prior to this course</inlineHelpText>
        <label>Prerequisite Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <inlineHelpText>Who are the Potential Course Attendees/Audience.</inlineHelpText>
        <label>Target Audience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_zone__c</fullName>
        <label>Time zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Yekaterinburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_ID__c</fullName>
        <description>This field will contain the Training Id generated by G2T and will be used in API calls</description>
        <label>Training Registration ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <inlineHelpText>Please select how the training would be provided</inlineHelpText>
        <label>Training Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Online, pre-recorded</fullName>
                </value>
                <value>
                    <fullName>Online, live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Region__c</fullName>
        <label>Training Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>World wide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_URL__c</fullName>
        <formula>IF(ISBLANK(Training_ID__c) , 
                     &quot;&quot;, &quot;https://student.gototraining.com/r/&quot;+ Training_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Unique_ID__c</fullName>
        <description>9 digits Training Id on GoToTraining</description>
        <inlineHelpText>9 digits Training Id on GoToTraining</inlineHelpText>
        <label>Training ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waitlisted_Date__c</fullName>
        <inlineHelpText>Date the attendee was waitlisted</inlineHelpText>
        <label>Waitlisted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_URL__c</fullName>
        <inlineHelpText>Link to the Course posting</inlineHelpText>
        <label>Web URL</label>
        <type>Url</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Type__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active__c</columns>
        <columns>Training_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_NFC_Courses</fullName>
        <columns>NAME</columns>
        <columns>Instructor_1__c</columns>
        <columns>Course_Description__c</columns>
        <columns>BrainShark_URL__c</columns>
        <columns>Training_URL__c</columns>
        <columns>Web_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>NFC</value>
        </filters>
        <label>All NFC Courses</label>
    </listViews>
    <listViews>
        <fullName>ClassroomSession</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Training_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Course__c.ClassroomSession</value>
        </filters>
        <label>Classroom Session</label>
    </listViews>
    <listViews>
        <fullName>Webinars</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Time_zone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Course__c.GoToWebinar</value>
        </filters>
        <label>Webinar</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <recordTypes>
        <fullName>BrainsharkTraining</fullName>
        <active>true</active>
        <description>This is record types for Brainshark Training</description>
        <label>OnDemand Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>ClassroomSession</fullName>
        <active>true</active>
        <description>This is record types for Classroom Session</description>
        <label>Classroom Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>GoToTraining</fullName>
        <active>true</active>
        <description>This is the record type for GoToTraining.</description>
        <label>Online Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>GoToWebinar</fullName>
        <active>true</active>
        <description>This is the record type for GoToWebinar</description>
        <label>Webinar</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BrainShark_URL_is_Required</fullName>
        <active>true</active>
        <description>BrainShark URL should not be left blank</description>
        <errorConditionFormula>AND((RecordType.DeveloperName = &quot;BrainsharkTraining&quot;), 
 ( ISBLANK(BrainShark_URL__c ) ) )</errorConditionFormula>
        <errorDisplayField>BrainShark_URL__c</errorDisplayField>
        <errorMessage>BrainShark URL is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_is_Required</fullName>
        <active>true</active>
        <description>This is validation Rule for End Date Should not be null</description>
        <errorConditionFormula>AND(((RecordType.DeveloperName = &quot;GoToWebinar&quot;)||(RecordType.DeveloperName = &quot;GoToTraining&quot;)||(RecordType.DeveloperName = &quot;ClassroomSession&quot;)),( 
(( ISBLANK( End_Date__c ) )) ))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_is_Required</fullName>
        <active>true</active>
        <description>This is validation Rule for Start Date should not be null.</description>
        <errorConditionFormula>AND(((RecordType.DeveloperName = &quot;GoToWebinar&quot;)||(RecordType.DeveloperName = &quot;GoToTraining&quot;)||(RecordType.DeveloperName = &quot;ClassroomSession&quot;)),( 
(( ISBLANK( Start_Date__c ) )) ))</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_should_fall_before_End_Date</fullName>
        <active>true</active>
        <description>This Validation Rule is for Start Date should come before the End Date</description>
        <errorConditionFormula>(End_Date__c &lt; Start_Date__c )</errorConditionFormula>
        <errorMessage>Start Date should fall before End Date.</errorMessage>
    </validationRules>
</CustomObject>